--- a/TA-Dashboard/TA-Dashboard.csproj
+++ b/TA-Dashboard/TA-Dashboard.csproj
@@ -79,6 +79,7 @@
     <Compile Include="PageObjects\Panels.cs" />
     <Compile Include="TestCases\Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestCases\BaseTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
