--- a/TA-Dashboard/TA-Dashboard.csproj
+++ b/TA-Dashboard/TA-Dashboard.csproj
@@ -80,6 +80,7 @@
     <Compile Include="TestCases\Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestCases\BaseTest.cs" />
+    <Compile Include="TestCases\Fail to login with incorrect credentials.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
