--- a/TA-Dashboard/TA-Dashboard.csproj
+++ b/TA-Dashboard/TA-Dashboard.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestCases\BaseTest.cs" />
     <Compile Include="TestCases\UnitTest1.cs" />
+    <Compile Include="TestCases\MainPages.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
