--- a/TA-Dashboard/TA-Dashboard.csproj
+++ b/TA-Dashboard/TA-Dashboard.csproj
@@ -84,6 +84,7 @@
     <Compile Include="TestCases\MainPage.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Interfaces\GeneralPage.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <Choose>
@@ -119,7 +120,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Interfaces\" />
     <Folder Include="TestData\" />
   </ItemGroup>
   <Import Project="packages\Selenium.WebDriver.ChromeDriver.2.22.0.0\build\Selenium.WebDriver.ChromeDriver.targets" Condition="Exists('packages\Selenium.WebDriver.ChromeDriver.2.22.0.0\build\Selenium.WebDriver.ChromeDriver.targets')" />
