--- a/TA-Dashboard/TA-Dashboard.csproj
+++ b/TA-Dashboard/TA-Dashboard.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="WebDriver, Version=2.53.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Selenium.WebDriver.2.53.1\lib\net40\WebDriver.dll</HintPath>
       <Private>True</Private>
@@ -82,6 +83,7 @@
     <Compile Include="TestCases\BaseTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Interfaces\LoginPage.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <Choose>
